fix: css changes to align text

--- a/geo-location/src/App.css
+++ b/geo-location/src/App.css
@@ -40,8 +40,7 @@
 
 .address-area {
   position: relative;
-  overflow-y: auto;
   margin: 25px;
   line-height: 2;
-  font-size: 18px;
+  font-size: 16px;
 }
